# pico_spdif_rx

./: CMakeLists.txt  _CMakeLists.txt  main.cpp  spdif_rx.c  spdif_rx.pio
